tests/neg/namespace-redefintion3/main.stk
namespace test.double  // error

fun main = 10 p
